--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,8 @@
 
   /* [추가] 다크 모드 변수 */
   --card-selected: oklch(0.56 0.01 240);
-  --card-hover: oklch(0.20 0.01 240);
+  --card-hover: oklch(0.7 0.01 240);
+  --card-expanded-dark: oklch(0.27 0.01 240);
 }
 
 @layer base {
